# auto_naukri_updater

./: README.md  devenv.nix  naukri_resume_update.py  pyproject.toml
