[project]
name = "auto-naukri-updater"
version = "0.1.0"
description = ""
authors = [
    {name = "codehia",email = "dev@sacharya.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.45.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
